# llm-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  Modelfile  Modelfile.simple  Modelfile.template  README.md  _config.yml  convert_to_gguf.sh  create_custom_model.py  docker-compose.yml  example_training_data.json  model_requirements.txt  pyproject.toml  quick-start.sh  requirements.txt  setup.cfg  test_converted_model.py
app/: main.py
tests/: test_basic.py
wronai/: README.md  __init__.py  __main__.py  cli.py  cli_new.py  create_custom_model.py  pyproject.toml  test_converted_model.py
wronai/models/: base.py  huggingface.py  ollama.py
wronai/tests/: __init__.py  test_cli.py
wronai/utils/: __init__.py
