[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wronai"
version = "0.1.6"
description = "End-to-end LLM model building, fine-tuning, and deployment toolkit"
authors = ["WronAI Team <info@softreck.dev>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wronai/llm-demo"
documentation = "https://github.com/wronai/llm-demo#readme"
keywords = ["llm", "ai", "machine-learning", "huggingface", "ollama", "fine-tuning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/wronai/llm-demo"
"Bug Tracker" = "https://github.com/wronai/llm-demo/issues"
"Documentation" = "https://github.com/wronai/llm-demo#readme"
"Source Code" = "https://github.com/wronai/llm-demo"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
rich = "^13.7.0"
requests = "^2.31.0"
huggingface-hub = "^0.19.4"
transformers = "^4.35.0"
torch = "^2.0.0"
peft = "^0.7.0"
bitsandbytes = "^0.41.0"
accelerate = "^0.25.0"
pyyaml = "^6.0.1"
jinja2 = "^3.1.2"
pydantic = "^2.4.2"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
types-requests = "^2.31.0"
types-PyYAML = "^6.0.0"

[tool.poetry.scripts]
wronai = 'wronai.cli_new:cli'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v --cov=wronai --cov-report=term-missing"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.coverage.run]
source = ["wronai"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
